:zap: Speed up compilation with pdf figures
:construction: To clean .gitignore.

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -173,21 +173,21 @@ $\theta$片由多块不同取向的一维光栅拼成。使用白光入射，频
     \centering
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-baseline.png}
+        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-baseline.pdf}
         \subcaption{不加滤波器}
         \label{fig:spatial_filter_a_base}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_pm1_only.png}
+        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_pm1_only.pdf}
         \subcaption{仅允许(0, $\pm 1$ 级)通过}
         \label{fig:spatial_filter_a_pm1}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_pm2_only.png}
+        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_pm2_only.pdf}
         \subcaption{仅允许(0, $\pm 2$ 级)通过}
         \label{fig:spatial_filter_a_pm2}
     \end{subfigure}
@@ -207,21 +207,21 @@ $\theta$片由多块不同取向的一维光栅拼成。使用白光入射，频
     \centering
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-baseline.png}
+        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-baseline.pdf}
         \subcaption{不加滤波器}
         \label{fig:spatial_filter_b_base}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_pm1_only.png}
+        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_pm1_only.pdf}
         \subcaption{仅允许(0, $\pm 1$ 级)通过}
         \label{fig:spatial_filter_b_pm1}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_pm1_pm2_only.png}
+        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_pm1_pm2_only.pdf}
         \subcaption{仅允许(0, $\pm 1$, $\pm 2$ 级)通过}
         \label{fig:spatial_filter_b_pm1_pm2}
     \end{subfigure}
@@ -241,21 +241,21 @@ $\theta$片由多块不同取向的一维光栅拼成。使用白光入射，频
     \centering
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-baseline.png}
+        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-baseline.pdf}
         \subcaption{不加滤波器}
         \label{fig:spatial_filter_c_base}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_only.png}
+        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_only.pdf}
         \subcaption{仅允许 0 级通过}
         \label{fig:spatial_filter_c_0}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_excluded.png}
+        \includegraphics[width=0.9\textwidth]{Data/001/10_per_mm-0_excluded.pdf}
         \subcaption{滤除 0 级（所有其他级通过）}
         \label{fig:spatial_filter_c_no0}
     \end{subfigure}
@@ -283,21 +283,21 @@ $\theta$片由多块不同取向的一维光栅拼成。使用白光入射，频
     % --- 第一排：3张图 ---
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/002/2dim_baseline_02.png}
+        \includegraphics[width=0.9\textwidth]{Data/002/2dim_baseline_02.pdf}
         \subcaption{不加滤波器}
         \label{fig:directional_filter_baseline}
     \end{subfigure}% 
     \hspace{0.03\textwidth}% --- 固定的水平间距 ---
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/002/2dim_horizontal.png}
+        \includegraphics[width=0.9\textwidth]{Data/002/2dim_horizontal.pdf}
         \subcaption{仅允许水平频率}
         \label{fig:directional_filter_horizontal}
     \end{subfigure}%
     \hspace{0.03\textwidth}% --- 固定的水平间距 ---
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/002/2dim_vertical.png}
+        \includegraphics[width=0.9\textwidth]{Data/002/2dim_vertical.pdf}
         \subcaption{仅允许竖直频率}
         \label{fig:directional_filter_vertical}
     \end{subfigure}
@@ -309,14 +309,14 @@ $\theta$片由多块不同取向的一维光栅拼成。使用白光入射，频
     % 由于外层有 \centering，这两张图会自动整体居中
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/002/2dim_plus45.png}
+        \includegraphics[width=0.9\textwidth]{Data/002/2dim_plus45.pdf}
         \subcaption{仅允许 $45^\circ$ 方向}
         \label{fig:directional_filter_plus45}
     \end{subfigure}%
     \hspace{0.03\textwidth}% --- 必须与第一排间距完全一致 ---
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/002/2dim_minus45.png}
+        \includegraphics[width=0.9\textwidth]{Data/002/2dim_minus45.pdf}
         \subcaption{仅允许 $-45^\circ$ 方向}
         \label{fig:directional_filter_minus45}
     \end{subfigure}
@@ -373,21 +373,21 @@ d_{\pm 45^\circ} \approx \frac{d_0}{\sqrt{2}}
     \centering
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{Data/003-pattern/conv_base_1.png}
+        \includegraphics[width=\textwidth]{Data/003-pattern/conv_base_1.pdf}
         \subcaption{卷积件1}
         \label{fig:convolution_base_1}
     \end{subfigure}
     \hspace{0.03\textwidth}
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{Data/003-pattern/conv_base_2.png}
+        \includegraphics[width=\textwidth]{Data/003-pattern/conv_base_2.pdf}
         \subcaption{卷积件2}
         \label{fig:convolution_base_2}
     \end{subfigure}
     \hspace{0.03\textwidth}
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{Data/003-pattern/conv_344_164.png}
+        \includegraphics[width=\textwidth]{Data/003-pattern/conv_344_164.pdf}
         \caption{卷积件1,2密接同向放置}
         \label{fig:convolution_baseline}
     \end{subfigure}
@@ -408,21 +408,21 @@ d_{\pm 45^\circ} \approx \frac{d_0}{\sqrt{2}}
     \centering
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_164.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_164.pdf}
         \subcaption{$+0^\circ$}
         \label{fig:convolution_rot_01_00deg}
     \end{subfigure}% 
     \hspace{0.03\textwidth}% --- 固定的水平间距 ---
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_014_164.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_014_164.pdf}
         \subcaption{$+30^\circ$}
         \label{fig:convolution_rot_01_30deg}
     \end{subfigure}%
     \hspace{0.03\textwidth}% --- 固定的水平间距 ---
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_029_164.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_029_164.pdf}
         \subcaption{$+45^\circ$}
         \label{fig:convolution_rot_01_45deg}
     \end{subfigure}
@@ -434,14 +434,14 @@ d_{\pm 45^\circ} \approx \frac{d_0}{\sqrt{2}}
     % 由于外层有 \centering，这两张图会自动整体居中
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_044_164.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_044_164.pdf}
         \subcaption{$+60^\circ$}
         \label{fig:convolution_rot_01_60deg}
     \end{subfigure}%
     \hspace{0.03\textwidth}% --- 必须与第一排间距完全一致 ---
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_074_164.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_074_164.pdf}
         \subcaption{$+90^\circ$}
         \label{fig:convolution_rot_01_90deg}
     \end{subfigure}
@@ -458,21 +458,21 @@ d_{\pm 45^\circ} \approx \frac{d_0}{\sqrt{2}}
     \centering
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_164.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_164.pdf}
         \subcaption{$+0^\circ$}
         \label{fig:convolution_rot_02_00deg}
     \end{subfigure}%
     \hspace{0.03\textwidth}% --- 固定的水平间距 ---
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_194.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_194.pdf}
         \subcaption{$+30^\circ$}
         \label{fig:convolution_rot_02_30deg}
     \end{subfigure}%
     \hspace{0.03\textwidth}% --- 固定的水平间距 ---
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_209.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_209.pdf}
         \subcaption{$+45^\circ$}
         \label{fig:convolution_rot_02_45deg}
     \end{subfigure}
@@ -484,14 +484,14 @@ d_{\pm 45^\circ} \approx \frac{d_0}{\sqrt{2}}
     % 由于外层有 \centering，这两张图会自动整体居中
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_224.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_224.pdf}
         \subcaption{$+60^\circ$}
         \label{fig:convolution_rot_02_60deg}
     \end{subfigure}%
     \hspace{0.03\textwidth}% --- 必须与第一排间距完全一致 ---
     \begin{subfigure}[b]{0.3\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_254.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_254.pdf}
         \subcaption{$+90^\circ$}
         \label{fig:convolution_rot_02_90deg}
     \end{subfigure}
@@ -515,14 +515,14 @@ d_{\pm 45^\circ} \approx \frac{d_0}{\sqrt{2}}
     \centering
     \begin{subfigure}[b]{0.4\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_164.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_344_164.pdf}
         \subcaption{$+0^\circ$}
         \label{fig:convolution_rot_both_00deg}
     \end{subfigure}
     \hspace{0.03\textwidth}% --- 固定的水平间距 ---
     \begin{subfigure}[b]{0.4\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_014_194.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_014_194.pdf}
         \subcaption{$+30^\circ$}
         \label{fig:convolution_rot_both_30deg}
     \end{subfigure}
@@ -531,14 +531,14 @@ d_{\pm 45^\circ} \approx \frac{d_0}{\sqrt{2}}
 
     \begin{subfigure}[b]{0.4\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_029_209.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_029_209.pdf}
         \subcaption{$+45^\circ$}
         \label{fig:convolution_rot_both_45deg}
     \end{subfigure}
     \hspace{0.03\textwidth}% --- 固定的水平间距 ---
     \begin{subfigure}[b]{0.4\textwidth}
         \centering
-        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_044_224.png}
+        \includegraphics[width=0.9\textwidth]{Data/003-pattern/conv_044_224.pdf}
         \subcaption{$+60^\circ$}
         \label{fig:convolution_rot_both_60deg}
     \end{subfigure}
@@ -552,10 +552,10 @@ d_{\pm 45^\circ} \approx \frac{d_0}{\sqrt{2}}
 
 \subsection{光学微分}
 
-% 插入单张Data/003-pattern/differential.png
+% 插入单张Data/003-pattern/differential.pdf
 \begin{figure*}
     \centering
-    \includegraphics[width=0.8\linewidth]{Data/003-pattern/differential.png}
+    \includegraphics[width=0.8\linewidth]{Data/003-pattern/differential.pdf}
     \captionnamefont{\wuhao\bf\heiti}
     \captiontitlefont{\wuhao\bf\heiti}
     \caption{光学微分实验结果图}
@@ -568,20 +568,20 @@ d_{\pm 45^\circ} \approx \frac{d_0}{\sqrt{2}}
 
 \subsection{\texorpdfstring{$\theta$}{theta} 调制}
 
-% Data/pseudo_colour.png为调制结果
-% Data/theta-modulation_diff_pattern为频谱面衍射图样
+% Data/pseudo_colour.pdf为调制结果
+% Data/theta-modulation_diff_pattern.pdf为频谱面衍射图样
 \begin{figure*}
     \centering
     \begin{subfigure}[b]{0.4\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{Data/pseudo_colour.png}
+        \includegraphics[width=\textwidth]{Data/005-theta/pseudo_colour.pdf}
         \subcaption{像面彩色图像}
         \label{fig:theta_modulation_image}
     \end{subfigure}
     \hspace{0.05\textwidth}
     \begin{subfigure}[b]{0.4\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{Data/theta-modulation_diff_pattern.png}
+        \includegraphics[width=\textwidth]{Data/005-theta/theta-modulation_diff_pattern.pdf}
         \subcaption{频谱面衍射图样}
         \label{fig:theta_modulation_spectrum}
     \end{subfigure}
